# SN2-TEST

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  install.sh  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/actions/docker-publish/: action.yml
.github/actions/trivy-sarif/: action.yml
.github/workflows/: build-binaries.yml  ci.yml  fuzz.yml  nightly.yml  publish-docker.yaml  release.yml  scorecard.yml  security.yml
crates/sn2-chain/: Cargo.toml
crates/sn2-chain/src/: attestation.rs  auto_update.rs  lib.rs  metagraph.rs  wallet.rs  weights.rs
crates/sn2-chain/tests/: attestation.rs
crates/sn2-chain/tests/fixtures/: attestation_14.6.0.json
crates/sn2-circuit-store/: Cargo.toml
crates/sn2-circuit-store/src/: lib.rs
crates/sn2-frame-codec/: Cargo.toml
crates/sn2-frame-codec/src/: lib.rs
crates/sn2-miner/: Cargo.toml
crates/sn2-miner/data/: wai_known_constants.json
crates/sn2-miner/src/: allowlist.rs  cli.rs  dsperse.rs  firewall.rs  handlers.rs  http_server.rs  lightning_server.rs  main.rs  nftables.rs  permit_resolver.rs  roster.rs  signature.rs  wai_known_constants.rs
crates/sn2-types/: Cargo.toml  build.rs
crates/sn2-types/src/: bounded_fifo_set.rs  circuit.rs  constants.rs  enums.rs  json_tensor.rs  lib.rs  miner_response.rs  persistence.rs  protocol.rs  request.rs  tensor_codec.rs
crates/sn2-validator/: Cargo.toml
crates/sn2-validator/src/: circuit_store.rs  cli.rs  config.rs  dsperse.rs  dsperse_events.rs  incremental_runner.rs  main.rs  miner_client.rs  performance.rs  pow_manager.rs  proof_uploader.rs  relay.rs  request_pipeline.rs  response_processor.rs  rsv.rs  scoring.rs  stats_reporter.rs  tensor.rs  tensor_json.rs  validator_loop.rs
crates/sn2-validator/src/validator_loop/: dispatch.rs  dslice.rs  maintenance.rs  mod.rs  relay.rs  results.rs  verification.rs
crates/sn2-verify/: Cargo.toml
crates/sn2-verify/src/: codec.rs  http_client.rs  lib.rs  main.rs  protocol.rs  reconstruct.rs  store.rs  verify.rs
docs/: command_line_arguments.md  pm2_configuration.md  prometheus.md  running_on_mainnet.md  running_on_staging.md  running_on_testnet.md  shared_setup_steps.md  verifying_releases.md  versioning.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: frame_codec.rs  frame_codec_chunked.rs  tensor_json.rs  tensor_protobuf.rs
neurons/utils/: auto_update.py
tools/: ci_loopback_seed.py  mock_circuit_api.py
