[package]
name = "sn2-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sn2-types = { workspace = true }
subxt = { workspace = true }
sp-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
bittensor_wallet = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }
openssl = { workspace = true }
futures-util = { workspace = true }
parity-scale-codec = { version = "3", features = ["derive"] }
