[package]
name = "sn2-circuit-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sn2-types = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
shellexpand = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
