[package]
name = "sn2-miner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "sn2-miner"
path = "src/main.rs"

[dependencies]
sn2-types = { workspace = true }
sn2-chain = { workspace = true }
btlightning = { workspace = true }
dsperse = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
sp-core = { workspace = true }
hex = { workspace = true }
subxt = { workspace = true }
async-trait = { workspace = true }
ndarray = { workspace = true }
shellexpand = { workspace = true }
