[package]
name = "sn2-miner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sn2-miner"
path = "src/main.rs"

[dependencies]
sn2-types = { workspace = true }
sn2-chain = { workspace = true }
sn2-circuit-store = { workspace = true }
btlightning = { workspace = true }
dsperse = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
subxt = { workspace = true }
shellexpand = { workspace = true }
rmp-serde = { workspace = true }
parity-scale-codec = { version = "3", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
