[package]
name = "sn2-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }
ndarray = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
bytes = { workspace = true }
