[package]
name = "sn2-validator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sn2-validator"
path = "src/main.rs"

[dependencies]
sn2-types = { workspace = true }
sn2-chain = { workspace = true }
sn2-verify = { workspace = true }
btlightning = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
uuid = { workspace = true }
rmp-serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subxt = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
dirs-next = "2"
futures-util = "0.3"
shellexpand = "3"
