[package]
name = "sn2-validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "sn2-validator"
path = "src/main.rs"

[dependencies]
sn2-types = { workspace = true }
sn2-chain = { workspace = true }
sn2-verify = { workspace = true }
sn2-circuit-store = { workspace = true }
btlightning = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subxt = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
dirs-next = { workspace = true }
futures-util = { workspace = true }
dsperse = { workspace = true }
ndarray = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
