[package]
name = "sn2-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "sn2_verify"
path = "src/lib.rs"

[[bin]]
name = "sn2-verify"
path = "src/main.rs"

[dependencies]
sn2-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmp-serde = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }
which = { workspace = true }
reqwest = { workspace = true }
