[package]
name = "sn2-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "sn2_verify"
path = "src/lib.rs"

[[bin]]
name = "sn2-verify"
path = "src/main.rs"

[dependencies]
sn2-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmp-serde = { workspace = true }
hex = { workspace = true }
dsperse = { workspace = true }
